--- a/ga-api.yaml
+++ b/ga-api.yaml
@@ -13,7 +13,7 @@ info:
       - AI support
       - and `much more`
       
-      # Categories suported
+      # Categories supported
         - herbs
         - vegetables
         - flowers
