--- a/ga-api.yaml
+++ b/ga-api.yaml
@@ -71,12 +71,23 @@ paths:
                   summary: All users example data
                   
                   value:
-                    - userId: 54dsf454421swdfdsf
-                      name: Mohamed Sallam
-                      email: mohamed.sallam@learnit.fi
-                    - userId: 54dsf45fdsfdsdfdsf
-                      name: User 001
-                      email: user.001@learnit.fi
+                    - id: 64a3c0d50d0f50248c8a4242
+                      name: User Name
+                      email: user.email@email.com
+                      image: "https://lh3.googleusercontent.com/a/AAcHTtfCw1CQHEbIB6rZ0clQ9GRjAy7QS3PZl7OCNEshx7zD=s96-c"
+                      createdAt: "2023-07-04T06:48:53.424Z"
+                      updatedAt: "2023-07-04T06:48:53.424Z" 
+                    - id: 64a3c0d50d0f50248c8a4242
+                      name: User Name
+                      email: user.email@email.com
+                      image: "https://lh3.googleusercontent.com/a/AAcHTtfCw1CQHEbIB6rZ0clQ9GRjAy7QS3PZl7OCNEshx7zD=s96-c"
+                      createdAt: "2023-07-04T06:48:53.424Z"
+                      updatedAt: "2023-07-04T06:48:53.424Z"   
+                      
+                    
+
+
+
 
         '500':
           $ref: "#/components/responses/InternalServerError"
