--- a/ga-api.yaml
+++ b/ga-api.yaml
@@ -2,23 +2,23 @@ openapi: 3.0.3
 info:
   title: Garden-App  APIs Definition
   description: |
-      # About Garden-App
-      ![Garden-App Logo](https://main.dps6886imp1cr.amplifyapp.com/_next/image?url=%2F_next%2Fstatic%2Fmedia%2Flogo-box.5c48920a.png&w=384&q=75)
-      
-      **Garden-App** is a gardening application that allows users to manage their garden and keep track of their plants. Users can add plants to their garden, view the quantity of plants they have, and reset the garden if needed. The app utilizes Redux and React Redux to manage the state of the garden.
-      
-      # The app's main features include:
-      - Retrieve all users data or single user data
-      - Retrieve all plants data or single plant data
-      - Filter plants by categories
-      - Search for specific plant
-      - AI support
-      - and `much more`
-      
-      # Categories supported
-        - herbs
-        - vegetables
-        - flowers
+    # About Garden-App
+    ![Garden-App Logo](https://main.dps6886imp1cr.amplifyapp.com/_next/image?url=%2F_next%2Fstatic%2Fmedia%2Flogo-box.5c48920a.png&w=384&q=75)
+
+    **Garden-App** is a gardening application that allows users to manage their garden and keep track of their plants. Users can add plants to their garden, view the quantity of plants they have, and reset the garden if needed. The app utilizes Redux and React Redux to manage the state of the garden.
+
+    # The app's main features include:
+    - Retrieve all users data or single user data
+    - Retrieve all plants data or single plant data
+    - Filter plants by categories
+    - Search for specific plant
+    - AI support
+    - and `much more`
+
+    # Categories supported
+      - herbs
+      - vegetables
+      - flowers
   termsOfService: https://garden-app-vercel.vercel.app/terms/
   contact:
     name: Garden App Team
@@ -48,115 +48,76 @@ paths:
       tags:
         - Users
       summary: List all Users
-      description: Returns the list of all registered Users 
-      
+      description: Returns the list of all registered Users
       responses:
-        '200':
-          description: Return A list of All Users
-          
+        "200":
+          description: Return a list of All Users
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  type: object
-                  properties:
-                    userId:
-                      type: string
-                    name:
-                      type: string
-                    email:
-                      type: string
-                
+                  $ref: "#/components/schemas/User"
               examples:
                 all-Users-data:
                   summary: All users example data
-                  
                   value:
-                    - id: 64a3c0d50d0f50248c8a4242
+                    - userId: 64a3c0d50d0f50248c8a4242
                       name: User Name
                       email: user.email@email.com
                       image: "https://lh3.googleusercontent.com/a/AAcHTtfCw1CQHEbIB6rZ0clQ9GRjAy7QS3PZl7OCNEshx7zD=s96-c"
                       createdAt: "2023-07-04T06:48:53.424Z"
-                      updatedAt: "2023-07-04T06:48:53.424Z" 
-                      
-        '500':
-          $ref: "#/components/responses/InternalServerError"
-        '400':
-          $ref: "#/components/responses/BadRequestError"
-                    
+                      updatedAt: "2023-07-04T06:48:53.424Z"
+        "500":
+                $ref: "#/components/responses/InternalServerError"
+        "400":
+             $ref: "#/components/responses/BadRequestError"
+
     post:
       tags:
         - Users
-      summary: List all Users
-      description: Returns the list of all registered Users 
-      
+      summary: Create a new User
+      description: Creates a new user and returns user details
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UserRequest"
       responses:
-        '200':
-          description: Return A list of All Users
-          
+        "201":
+          description: Return the created User
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    userId:
-                      type: string
-                    name:
-                      type: string
-                    email:
-                      type: string
-                
-              examples:
-                all-Users-data:
-                  summary: All users example data
-                  
-                  value:
-                    - name: User Name
-                      email: user.email@email.com
-                      image: "https://lh3.googleusercontent.com/a/AAcHTtfCw1CQHEbIB6rZ0clQ9GRjAy7QS3PZl7OCNEshx7zD=s96-c"
-                      
-
-
-
-        '500':
+                $ref: "#/components/schemas/User"
+        "500":
           $ref: "#/components/responses/InternalServerError"
-        '400':
+        "400":
           $ref: "#/components/responses/BadRequestErrorUserPost"
-  
+
   /Users/{userId}:
     get:
       tags:
         - User
-      summary: Return single user details based on ID 
+      summary: Get user details by ID
       description: |
-        Return single user details based on ID. You can provide the id as a segment in the URL as the following example:   
-        ### http://localhost:3000/api/users`?id=64a95a8d5efe31c392445f33`
+        Get user details based on ID provided in the URL.
+        Example: `http://localhost:3000/api/users/64a95a8d5efe31c392445f33`
       parameters:
         - name: userId
           in: path
           required: true
           schema:
             type: string
-            minimum: 100
-            maximum: 1000
           example: 64a95a8d5efe31c392445f33
       responses:
         '200':
-          description: Return single user details based on ID 
+          description: Return user details based on ID
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  userId:
-                    type: string
-                  name:
-                    type: string
-                  email:
-                    type: string
+                $ref: "#/components/schemas/User"
               examples:
                 single-user-data:
                   summary: Single user details
@@ -164,12 +125,11 @@ paths:
                     userId: 54dsf454421swdfdsf
                     name: Mohamed Sallam
                     email: mohamed.sallam@learnit.fi
-
         '500':
           $ref: "#/components/responses/InternalServerError"
         '400':
           $ref: "#/components/responses/BadRequestError"
-  
+
   /loggedinUser:
     get:
       tags:
@@ -177,7 +137,7 @@ paths:
       summary: Return the current logged in User for testing purposes (name & email)
       description: Return single logged in user using session provider
       responses:
-        '200':
+        "200":
           description: Return logged in User details
           content:
             application/json:
@@ -198,9 +158,9 @@ paths:
                     name: Mohamed Sallam
                     email: mohamed.sallam@learnit.fi
 
-        '500':
+        "500":
           $ref: "#/components/responses/InternalServerError"
-          
+
   /plants:
     get:
       tags:
@@ -208,16 +168,16 @@ paths:
       summary: List all plants available in the database
       description: |
         Returns the List of all plants available in the database
-      
+
       responses:
-        '200':
+        "200":
           description: A list all plants available in the database
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/PlantData'
+                  $ref: "#/components/schemas/PlantData"
               examples:
                 plants-data:
                   summary: Plants example data
@@ -230,28 +190,27 @@ paths:
                       lighting: ["full sun", "partial shade"]
                       diseases: ["disease_001", "disease_002"]
                       type: "herb"
-                      
 
-                      blooming_period: {
-                        add_information: "between late spring and early fall",
-                        start: "2023-07-01",
-                        end: "2023-09-30"
-                      }
+                      blooming_period:
+                        {
+                          add_information: "between late spring and early fall",
+                          start: "2023-07-01",
+                          end: "2023-09-30",
+                        }
                       dimensions: max 30cm
                       hardiness: hardiness data
                       soil_ph_min: 7
                       soil_ph_max: 77
                       life_cycle: evergreen
                       CareAdvice:
-                          watering: "deeply 2-3 times per week when top of soil becomes dry"
-                          fertilizing: "fertilizing"
-                          planting: "planting"
-                          seasonal_care: "seasonal_care"
+                        watering: "deeply 2-3 times per week when top of soil becomes dry"
+                        fertilizing: "fertilizing"
+                        planting: "planting"
+                        seasonal_care: "seasonal_care"
 
-                      
-        '500':
+        "500":
           $ref: "#/components/responses/InternalServerError"
-        
+
   /api/plants/{plantId}:
     get:
       tags:
@@ -270,12 +229,12 @@ paths:
             maximum: 1000
           example: 102
       responses:
-        '200':
+        "200":
           description: A list all plants available in the database
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/PlantData'
+                $ref: "#/components/schemas/PlantData"
               examples:
                 plants-data:
                   summary: Single plant example data
@@ -289,18 +248,19 @@ paths:
                     diseases: ["disease_001", "disease_002"]
                     type: "flower"
 
-                    blooming_period: {
+                    blooming_period:
+                      {
                         add_information: "between late spring and early fall",
                         start: "2023-07-01",
-                        end: "2023-09-30"
+                        end: "2023-09-30",
                       }
-                    
+
                     dimensions: max 30cm
                     hardiness: hardiness data
                     soil_ph_min: 7
                     soil_ph_max: 77
                     life_cycle: evergreen
-        '500':
+        "500":
           $ref: "#/components/responses/InternalServerError"
 
   /api/plants:
@@ -314,9 +274,9 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/addPlant'
+              $ref: "#/components/schemas/addPlant"
       responses:
-        '200':
+        "200":
           description: OK
 
 components:
@@ -328,7 +288,6 @@ components:
       schema:
         type: integer
   schemas:
-
     PlantData:
       type: object
       properties:
@@ -339,26 +298,26 @@ components:
         common_name:
           type: string
         scientific_name:
-          type: string 
-        image_url: 
-          type: string 
+          type: string
+        image_url:
+          type: string
         description:
-          type: string 
+          type: string
         lighting:
-          type: array 
+          type: array
           items:
             type: string
         diseases:
-          type: array 
+          type: array
           items:
             type: string
         type:
-          type: array 
+          type: array
           items:
             type: string
 
         blooming_period:
-          type: object 
+          type: object
           properties:
             add_information:
               type: string
@@ -366,19 +325,19 @@ components:
               type: string
             extendedData_003:
               type: string
-        
+
         dimensions:
-          type: string 
+          type: string
         hardiness:
-          type: string 
+          type: string
         soil_ph_min:
-          type: integer 
+          type: integer
         soil_ph_max:
-          type: integer 
-        life_cycle:  
-          type: string 
+          type: integer
+        life_cycle:
+          type: string
         care_advice:
-              $ref: '#/components/schemas/CareAdvice'  
+          $ref: "#/components/schemas/CareAdvice"
 
     addPlant:
       type: object
@@ -388,7 +347,7 @@ components:
           items:
             type: string
         blooming_period:
-          type: object 
+          type: object
           properties:
             add_information:
               type: string
@@ -397,7 +356,7 @@ components:
             extendedData_003:
               type: string
         care_advice:
-              $ref: '#/components/schemas/CareAdvice'
+          $ref: "#/components/schemas/CareAdvice"
         description:
           type: string
         diseases:
@@ -428,9 +387,35 @@ components:
         soil_ph_max:
           type: number
           format: float
+    User:
+      type: object
+      properties:
+        userId:
+          type: string
+        name:
+          type: string
+        email:
+          type: string
+        image:
+          type: string
+        createdAt:
+          type: string
+          format: date-time
+        updatedAt:
+          type: string
+          format: date-time
 
+    UserRequest:
+      type: object
+      properties:
+        name:
+          type: string
+        email:
+          type: string
+        password:
+          type: string
     blooming_period:
-      type: object 
+      type: object
       properties:
         add_information:
           type: string
@@ -442,13 +427,13 @@ components:
     CareAdvice:
       type: object
       properties:
-        watering: 
+        watering:
           type: string
-        fertilizing: 
+        fertilizing:
           type: string
-        planting: 
+        planting:
           type: string
-        seasonal_care: 
+        seasonal_care:
           type: string
 
   responses:
